added home page and route to open home page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Da Tech Blod</title>
+    <title>Da Tech Blog</title>
     <link rel="stylesheet" href="/css/main.css">
     <div class="topnav">
   <a class="active" href="#home">Home</a>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    {{!-- Nav bar that goes on every page --}}
+    {{! Navigation Bar Start}}
     <nav id="navbar">
         <ul id="navbar-ul">
             <li>
@@ -35,8 +35,10 @@
             </li>
             {{/if}}
         </ul>
-        <h1 id="nav-header">The Tech Blog</h1>
+        <h1 id="nav-header">Da Tech Blog</h1>
     </nav>
+{{! Navigation Bar End}}
+
     {{{body}}}
 
 </body>
