--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,5 +46,6 @@
 <script src="/js/nav.js"></script> --}}
 <script src="/js/logout.js"></script>
 <script src="/js/home.js"></script>
+<script src="/js/login.js"></script>
 
 </html>
