--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,16 +16,17 @@
       </h1>
     </header>
     <main>
+      
      <ol class="post-list">
   {{#each posts}}
   <li>
     <article class="post">
       <div class="title">
-        <a href="{{post_content}}" target="_blank">{{title}}</a>
+        <a href="post/{{id}}">{{title}}</a>
         <span>({{post_content}})</span>
       </div>
       <div class="meta">
-         point(s) by {{Users.user_name}} on
+        Created by {{Users.user_name}} on
         {{created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
