just random commit

--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -5,7 +5,7 @@
     <span>({{post.post_content}})</span>
   </div>
   <div class="meta">
-    Created by {{Users.user_name}} on
+    Created by {{user.user_name}} on
     {{created_at}}
     |
     <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
