--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,10 +6,7 @@
     <title>Da Tech Blog</title>
     <link rel="stylesheet" href="/css/main.css">
     <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#dashboard">Dashboard</a>
-  <a href="#login">Login</a>
-  <a href="#logout">Logout</a>
+
 </div>
 
 </head>
@@ -64,5 +61,6 @@
 <script src="/js/nav.js"></script> --}}
 <script src="/js/logout.js"></script>
 <script src="/js/home.js"></script>
+<script src="/javascript/login.js"></script>
 
 </html>
