added user routes to show on insomnia/added login and sign up

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
+<form class="login-form">
+  <div>
+    <label for="email-login">email:</label>
+    <input type="text" id="email-login" />
+  </div>
+  <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
+</form>
 
-<head>
-    <meta charset="utf-8">
-    <title>Da Tech Blog</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <div class="topnav">
-
-</div>
-
-</head>
-
-<body>
 <form class="signup-form">
   <div>
     <label for="username-signup">username:</label>
@@ -29,6 +29,8 @@
     <button type="submit">signup</button>
   </div>
 </form>
+
+<script src="/javascript/login.js"></script>
 
     {{!-- {{! Navigation Bar Start}}
     <nav id="navbar">
