debugged homepage problem with partials/now showing partials again

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,37 +32,13 @@
 
 <script src="/javascript/login.js"></script>
 
-    {{!-- {{! Navigation Bar Start}}
-    <nav id="navbar">
-        <ul id="navbar-ul">
-            <li>
-                <p><a class="link" href="/">Home</a></p>
-            </li>
-            {{#if loggedIn}}
-            <li>
-                <p><a class="link" href="/dashboard">Dashboard</a></p>
-            </li>
-            <li>
-                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
-            </li>
-
-            {{else}}
-            <li>
-                <p><a class="link" href="/login">Login</a></p>
-            </li>
-            {{/if}}
-        </ul>
-        <h1 id="nav-header">Da Tech Blog</h1>
-    </nav>
-{{! Navigation Bar End}}
-
-    {{{body}}} --}}
+   
 
 </body>
 {{!--
 <script src="/js/nav.js"></script> --}}
 <script src="/js/logout.js"></script>
 <script src="/js/home.js"></script>
-<script src="/javascript/login.js"></script>
+<script src="/js/login.js"></script>
 
 </html>
