--- a/views/layouts/partials/comment.handlebars
+++ b/views/layouts/partials/comment.handlebars
@@ -2,7 +2,7 @@
   {{#each this}}
   <section class="comment">
     <div class="meta">
-      {{user.username}} 
+      {{users.username}} 
     </div>
     <div class="text">
       {{comment_content}}
