--- a/views/layouts/partials/post.handlebars
+++ b/views/layouts/partials/post.handlebars
@@ -4,7 +4,7 @@
     <span>({{format_url post_content}})</span>
   </div>
   <div class="meta">
-    by {{user.user_name}} 
+    by {{Users.user_name}} 
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
