--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -1,4 +1,4 @@
-{{!-- <article class="post">
+<article class="post">
   <div class="title">
     <h1>{{post.title}}</h1>
    
@@ -10,4 +10,4 @@
     |
     <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
   </div>
-</article> --}}
+</article>
