--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Da Tech Blog</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#dashboard">Dashboard</a>
-  <a href="#login">Login</a>
-  <a href="#logout">Logout</a>
-</div>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Just Tech News</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-    {{! Navigation Bar Start}}
-    <nav id="navbar">
-        <ul id="navbar-ul">
-            <li>
-                <p><a class="link" href="/">Home</a></p>
-            </li>
-            {{#if loggedIn}}
-            <li>
-                <p><a class="link" href="/dashboard">Dashboard</a></p>
-            </li>
-            <li>
-                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
-            </li>
-
-            {{else}}
-            <li>
-                <p><a class="link" href="/login">Login</a></p>
-            </li>
-            {{/if}}
-        </ul>
-        <h1 id="nav-header">Da Tech Blog</h1>
-    </nav>
-{{! Navigation Bar End}}
-
-    {{{body}}}
-
+  <div class="wrapper">
+    <header>
+      <h1>
+        <a href="/">Just Tech News</a>
+      </h1>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main>
+      {{{ body }}}
+    </main>
+    <footer>
+      Thanks for visiting!
+    </footer>
+  </div>
+  
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
+
+</html>
 {{!--
 <script src="/js/nav.js"></script> --}}
 <script src="/js/logout.js"></script>
