--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -26,7 +26,7 @@
         <span>({{post_content}})</span>
       </div>
       <div class="meta">
-        Created by {{Users.user_name}} on
+        Created by {{Users.username}} on
         {{created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
