--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,15 +30,14 @@
   </div>
 </form>
 
-<script src="/javascript/login.js"></script>
+<script src="/js/login.js"></script>
 
    
 
 </body>
-{{!--
-<script src="/js/nav.js"></script> --}}
+
 <script src="/js/logout.js"></script>
-<script src="/js/home.js"></script>
+
 <script src="/js/login.js"></script>
 
 </html>
