--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,14 +30,4 @@
   </div>
 </form>
 
-<script src="/js/login.js"></script>
-
-   
-
-</body>
-
-<script src="/js/logout.js"></script>
-
-<script src="/js/login.js"></script>
-
-</html>
+<script src="/javascript/login.js"></script>
