posts added to homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,7 +18,7 @@
     <main>
       
      <ol class="post-list">
-  {{#each posts}}
+  {{#each Post}}
   <li>
     <article class="post">
       <div class="title">
