--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button type="button" class="loginbutton">login</button>
   </div>
 </form>
 
