--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section class="box">
   <h2>Create New Post</h2>
 
   <form class="new-post-form">
@@ -7,8 +7,8 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-content">content</label>
-      <input id="post-content" name="post-content" />
+      <label for="post-url">Link</label>
+      <input id="post-url" name="post-url" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
@@ -20,12 +20,12 @@
   <ol>
     {{#each posts as |post|}}
     <li>
-      {{post}}
-      <a href="/dashboard/edit/{{post}}" class="edit-link">Edit post</a>
+      {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
     </li>
     {{/each}}
   </ol>
 </section>
 {{/if}}
 
-<script src="/js/add-post.js"></script>
+<script src="/javascript/add-post.js"></script>
