--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="button" class="loginbutton">login</button>
+    <button type="submit">login</button>
   </div>
 </form>
 
@@ -30,4 +30,4 @@
   </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/javascript/login.js"></script>
