--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -1,13 +1,21 @@
-<article class="post">
-  <div class="title">
-    <h1>{{post.title}}</h1>
-   
-    <span>({{post.post_content}})</span>
+{{> post-info post}}
+
+{{#if loggedIn}}
+<form class="comment-form">
+  <div>
+    <textarea name="comment-body"></textarea>
   </div>
-  <div class="meta">
-    Created by {{Users.username}} on
-    {{created_at}}
-    |
-    <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+
+  <div>
+    <button type="submit">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
   </div>
-</article>
+</form>
+{{/if}}
+
+{{> comments post.comments}}
+
+{{#if loggedIn}}
+<script src="/javascript/comment.js"></script>
+<script src="/javascript/upvote.js"></script>
+{{/if}}
