--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Tech Blog</a>
+        <a href="/">Just Tech News</a>
       </h1>
       <nav>
         {{#if loggedIn}}
@@ -32,7 +32,7 @@
   </div>
   
   {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
+  <script src="/javascript/logout.js"></script>
   {{/if}}
 </body>
 
