--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<article class="post">
+<article class="post has-background-grey-lighter">
   <div class="title">
     <a href="{{post_url}}" target="_blank">{{title}}</a>
     <span>({{format_url post_url}})</span>
