--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,17 +23,17 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Da Tech Blog</a>
+        DA TECH BLOG
       </h1>
       <nav>
         {{#if loggedIn}}
-        
-        <a href="/dashboard">dashboard</a>
+        <a href="/dashboard" class="m-1">Dashboard</a>
+        <a href="/" class="m-1">Home</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
-      </nav>
+      </nav>  
     </header>
     <main>
       {{{ body }}}
