commit before deploy

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
         {{#if loggedIn}}
         <a href="/dashboard" class="m-1">Dashboard</a>
         <a href="/" class="m-1">Home</a>
-        <button id="logout" class="btn-no-style">logout</button>
+        <button id="logout" class="btn-no-style is-primary">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
